workshop updated all bs lesa el herobanner we el bell tetzabat

--- a/src/pages/ProStudentNotifications.css
+++ b/src/pages/ProStudentNotifications.css
@@ -147,21 +147,6 @@
   margin: 0;
 }
 
-@media (max-width: 768px) {
-  .notifications-container {
-    flex-direction: column;
-    height: auto;
-  }
-
-  .notifications-list {
-    padding-right: 0;
-  }
-
-  .notification-details {
-    margin-top: 1rem;
-  }
-}
-
 .notification-interview .notification-icon {
   background-color: #fff3e0;
   color: #f57c00;
@@ -182,10 +167,35 @@
   color: #c2185b;
 }
 
+.notification-workshop .notification-icon {
+  background-color: #e0f7fa;
+  color: #0288d1;
+}
+
+.notification-chat .notification-icon {
+  background-color: #f3e5f5;
+  color: #8e24aa;
+}
+
 .notification-card.read {
   opacity: 0.8;
 }
 
 .notification-card.read:hover {
   opacity: 1;
-} 
+}
+
+@media (max-width: 768px) {
+  .notifications-container {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .notifications-list {
+    padding-right: 0;
+  }
+
+  .notification-details {
+    margin-top: 1rem;
+  }
+}
